--- a/frontend-application/src/App.css
+++ b/frontend-application/src/App.css
@@ -1,3 +1,15 @@
 body {
-  background-color: #e0e1dd;
+  background-color: var(--background);
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+  background-color: var(--primary);
+}
+
+.logo {
+  font-size: 500px;
 }
